--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "office-addin-manifest": "^1.12.3",
     "office-addin-prettier-config": "^1.2.0",
     "os-browserify": "^0.3.0",
+    "prettier": "2.8.8",
     "process": "^0.11.10",
     "source-map-loader": "^3.0.0",
     "ts-loader": "^9.4.1",
