--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "typescript": "^4.7.4",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "4.13.1"
+    "webpack-dev-server": "4.13.1",
+    "string-replace-loader": "^3.1.0"
   },
   "prettier": "office-addin-prettier-config",
   "browserslist": [
